# duckson

./: .gitignore  pyproject.toml
scripts/: run_sim.py
src/base/: robot.py
src/sim/: duckson.py
src/sim/xmls/: open_duck_mini_v2.xml  scene_rough_terrain_backlash.xml
src/utils/: setup_logging.py
